header align fixed

--- a/style.css
+++ b/style.css
@@ -33,3 +33,7 @@
   -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
   box-shadow: inset 0px 0px 5px #c1c1c1;
 }
+.header {
+  display: flex;
+  justify-content: center;
+}
